discuss Next Project section completed with responsive

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
             <img class="w-full" src="img/img5.png" alt="" />
           </div>
         </div>
+      </div>
     </section>
 
     <!-- Meet our tream -->
@@ -332,7 +333,60 @@
 
     </section>
 
+    <!-- discuss Next Project section -->
+    <section class="py-28" style="background-image: url(img/bg.jpg);">
+      <div class="w-[90%] lg:w-[75%] m-auto">
+        <div class="text-center">
+          <button class="bg-[#E4F2D5] py-2 px-5 rounded-3xl mb-6">
+            <span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>Let’s Connect
+          </button>
+          <h1 class="text-center font-extrabold mb-7 lg:mx-28 text-3xl lg:text-5xl">
+            Let’s Discuss Next Project
+          </h1>
+          <p class="text-center mb-8 font-medium text-lg">
+            The barn house captivates with its blend of rustic charm and
+            modern sophistication,<br class="hidden lg:block" />featuring
+            weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <div class="">
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+            <div class="mt-2">
+              <input type="text" name="First Name*" placeholder="First Name*" class=" block w-full rounded-3xl border-0
+                py-3 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+                focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+            <div class="mt-2">
+              <input type="text" name="First Name*" placeholder="Last Name*" class=" block w-full rounded-3xl border-0
+                py-3 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+                focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+            <div class="mt-2">
+              <input type="text" name="First Name*" placeholder="Phone Number*" class=" block w-full rounded-3xl border-0
+                py-3 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+                focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+            <div class="mt-2">
+              <input type="text" name="First Name*" placeholder="Email Number*" class=" block w-full rounded-3xl border-0
+               py-3 pl-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2
+                focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+          </div>
+          <div>
+            <div class="mt-5">
+              <textarea type="text" name="about" rows="6" placeholder="Write your message here"
+                class="block w-full  py-3 pl-3 rounded-3xl border-0  text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:  text-gray-400  focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+            </div>
+          </div>
+          <div class="mt-5">
+            <button class="btn bg-[#ABEF5F] rounded-[32px] w-[100%] font-bold text-lg">Send Mail<span><i
+                  class="fa-solid fa-arrow-right -rotate-45 bg-black text-white px-2 py-2 rounded-full"></i></span>
+            </button>
+          </div>
+        </div>
 
+      </div>
+    </section>
   </main>
 
   <footer></footer>
