all section complete with small divice responsive

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
 
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 pb-8">
-          <div class="lg:flex col-span-2">
+          <div class="border rounded-xl  border-gray-200 p-3 lg:flex col-span-2">
             <img class="mr-8 w-full" src="img/img1.png" alt="" />
             <div class="text-start">
               <h3 class="font-extrabold text-xl mb-4">Commercial</h3>
@@ -222,14 +222,14 @@
             </div>
           </div>
 
-          <img class="w-full" src="img/img2.png" alt="" />
+          <img class="border rounded-xl  border-gray-200 p-3 py-5 -auto w-full" src="img/img2.png" alt="" />
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-5 lg:grid-cols-4 gap-4">
-          <img class="w-full hidden lg:block" src="img/img3.png" alt="" />
-          <img class="w-full lg:hidden" src="img/img5.png" alt="" />
+          <img class="border rounded-xl  border-gray-200 p-3 py-5  w-full hidden  lg:block" src="img/img3.png" alt="" />
+          <img class="border rounded-xl  border-gray-200 p-3 py-5  w-full lg:hidden" src="img/img5.png" alt="" />
 
-          <div class="lg:flex col-span-2">
+          <div class="lg:flex col-span-2 border rounded-xl  border-gray-200 p-3">
             <img class="mr-8 w-full" src="img/img4.png" alt="" />
             <div class="text-start">
               <h3 class="font-extrabold text-xl mb-4">Commercial</h3>
@@ -242,9 +242,9 @@
             </div>
           </div>
           <div>
-            <img class="w-full mb-4 lg:hidden" src="img/img3.png" alt="" />
+            <img class="border rounded-xl  border-gray-200 p-3 py-5  w-full mb-4 lg:hidden" src="img/img3.png" alt="" />
 
-            <img class="w-full" src="img/img5.png" alt="" />
+            <img class="border rounded-xl  border-gray-200 p-3 py-5 w-full" src="img/img5.png" alt="" />
           </div>
         </div>
       </div>
@@ -389,7 +389,43 @@
     </section>
   </main>
 
-  <footer></footer>
+  <footer class="bg-black">
+    <section class="py-16">
+      <div class="w-[80%] mx-auto">
+        <div class="text-center">
+          <button class="py-2 px-5 rounded-3xl mb-6">
+            <span><i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] px-3 py-3 rounded-full"></i></span>
+            <a class="btn btn-ghost text-white text-3xl font-extrabold">Rinterio</a>
+          </button>
+
+          <p class="text-center mb-8 font-medium text-lg text-[#737373]">
+            The barn house captivates with its blend of rustic charm and
+            modern sophistication,<br class="hidden lg:block" />featuring
+            weathered wood, sleek metal accents.
+          </p>
+        </div>
+
+        <div class="py-8">
+          <ul class="lg:flex lg:m-auto lg:justify-center text-center  lg:gap-36">
+            <li>
+              <button class="text-white mb-8">Home</button>
+            </li>
+            <li><button class="text-white mb-8">Services</button></li>
+            <li><button class="text-white mb-8">Portfolio</button></li>
+            <li><button class="text-white mb-8">Blogs</button></li>
+            <li><button class="text-white mb-8">Contact Us</button></li>
+          </ul>
+        </div>
+
+        <div class="m-auto text-center">
+          <button class="btn bg-[#ABEF5F] rounded-[32px] font-bold text-xl">Book Consult<span><i
+                class="fa-solid fa-arrow-right -rotate-45 bg-black text-white px-2 py-2 rounded-full"></i></span>
+          </button>
+        </div>
+      </div>
+
+    </section>
+  </footer>
 </body>
 
 </html>
