third assignment all works completed

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div class="mt-5 mx-5 lg:ml-11">
+        <div class="mx-5 lg:ml-11">
           <img class="lg:w-[574px] lg:h-[520px]" src="img/Rectangle.png" alt="" />
         </div>
       </div>
@@ -389,6 +389,8 @@
     </section>
   </main>
 
+
+  <!-- Footer section -->
   <footer class="bg-black">
     <section class="py-16">
       <div class="w-[80%] mx-auto">
